# supermarket-price-tracker

./: .gitignore  LIBRO-BASE-PRODUCTOS_ok.xlsx  LICENSE  Lista_de_productos.xlsx  README.md  cd  collect_prices.sh  constants.py  main.py  precios.csv  precios.xlsx  pyproject.toml  requirements.txt  requirements_dev.txt  run.sh  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/price_tracker/: constants.py  csv_to_monthly_xlsx.py  main.py  smtp.py
src/price_tracker/outputs/: .gitignore  01_listado_precios_Enero.xlsx  12_listado_precios_Diciembre.xlsx  2022_12_27_precios.csv  2022_12_29_precios.csv  2023_01_01_precios.csv  2023_01_02_precios.csv
src/price_tracker/resources/: Lista_de_productos.xlsx
src/price_tracker/utils/: __init__.py  common.py  io_utils.py  possible_class_implementation.py  prints.py  retriever.py  smtp.py
tests/: test_io.py  test_retrieving.py  test_smtp.py
utils/: __init__.py  io_utils.py  parsers.py  possible_class_implementation.py  retriever.py
