[metadata]
name = price_tracker
description = tracks daily prices from supermarkets
author = Aitor Martinez Seras
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    price_tracker
install_requires =
    requests>=2
    pandas~=1.5.1
    bs4~=0.0.1
    beautifulsoup4~=4.11.1
    requests~=2.28.1
    numpy~=1.23.4
    requests-html~=0.10.0
    openpyxl~=3.0.10
python_requires = >=3.6
package_dir =
        =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
price_tracker = py.typed

[flake8]
max-line-length = 160